add retry historic page

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,13 @@
 </head>
 
 <body>
-    <app-root>Loading...</app-root>
+    <app-root>
+        <div class="responsive-container">
+            <img class="center"
+                src="../assets/images/proteccion-logo-s.png"
+                alt="proteccionycesantias" />
+        </div>
+    </app-root>
 </body>
 
 </html>
