--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <app-root>
         <div class="responsive-container">
             <img class="center"
-                src="../assets/images/proteccion-logo-s.png"
+                src="./assets/images/proteccion-logo-s.png"
                 alt="proteccionycesantias" />
         </div>
     </app-root>
