fix bugs protección

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,7 @@
     <link rel="icon"
         type="image/x-icon"
         href="favicon.ico">
-    
-
+        <script src="./assets/proteccion.config.js"></script>
 </head>
 
 <body>
